Fix: align connect wallet button when signed out mobile

--- a/src/modules/pages/components/RouteLayouts/UserNavigation.css
+++ b/src/modules/pages/components/RouteLayouts/UserNavigation.css
@@ -200,6 +200,7 @@
 
   .main {
     height: 100%;
+    gap: 7px;
   }
 
   /* Fade effect when number of colonies is > 7 */
@@ -219,6 +220,7 @@
   .connectWalletButton {
     margin-top: 7px;
     margin-bottom: 7px;
+    margin-right: 0px;
     width: 120px;
   }
 }
